--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio de Estudante - [Seu Nome]</title>
+    <title>Portfólio de Nicolas</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
-        /* Variáveis CSS para facilitar a manutenção de cores e tamanhos */
+        /* Variáveis CSS */
         :root {
-            --primary-color: #4CAF50; /* Verde */
-            --secondary-color: #3f51b5; /* Índigo */
+            --primary-color: #4CAF50;
+            --secondary-color: #3f51b5;
             --text-color: #333;
             --light-text-color: #fff;
             --bg-light: #f4f4f4;
-            --bg-dark: #333;
+            --bg-dark: #111;
             --card-bg: #ffffff;
-            --border-radius: 8px;
-            --transition-speed: 0.3s ease; /* Velocidade padrão para transições */
+            --border-radius: 10px;
+            --transition-speed: 0.4s ease;
         }
 
-        /* Reset básico para todos os elementos */
+        /* Reset de estilo */
         * {
             margin: 0;
             padding: 0;
@@ -29,110 +29,41 @@
         body {
             font-family: 'Poppins', sans-serif;
             line-height: 1.6;
-            color: var(--text-color);
             background-color: var(--bg-light);
-            scroll-behavior: smooth; /* Habilita rolagem suave ao clicar em links internos */
+            color: var(--text-color);
+            scroll-behavior: smooth;
         }
 
-        /* Estilo para links */
+        /* Estilos de Links */
         a {
             text-decoration: none;
             color: var(--primary-color);
-            transition: color var(--transition-speed);
+            transition: color 0.3s;
         }
 
         a:hover {
             color: var(--secondary-color);
         }
 
-        /* Remove marcadores de lista */
-        ul {
-            list-style: none;
-        }
-
-        /* Estilo para títulos */
-        h1, h2, h3 {
-            color: var(--text-color);
-            margin-bottom: 1rem;
-        }
-
-        h2 {
-            text-align: center;
-            font-size: 2.5rem;
-            margin-bottom: 2rem;
-            position: relative;
-            padding-bottom: 10px;
-        }
-
-        /* Linha decorativa abaixo dos títulos H2 */
-        h2::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 60px;
-            height: 4px;
-            background-color: var(--primary-color);
-            border-radius: 2px;
-        }
-
-        /* Estilo para botões gerais */
-        .btn {
-            display: inline-block;
-            background: var(--primary-color);
-            color: var(--light-text-color);
-            padding: 0.8rem 1.5rem;
-            border-radius: 5px;
-            transition: background var(--transition-speed), transform var(--transition-speed);
-            text-align: center;
-            font-weight: 600;
-        }
-
-        .btn:hover {
-            background: var(--secondary-color);
-            transform: translateY(-3px); /* Efeito de "levantar" ao passar o mouse */
-        }
-
-        /* Estilo base para todas as seções */
-        section {
-            padding: 4rem 5%;
-            margin: 0 auto;
-            max-width: 1200px;
-            opacity: 0; /* Começa invisível para a animação de entrada */
-            transform: translateY(20px); /* Começa ligeiramente abaixo para a animação */
-            transition: opacity 0.8s ease-out, transform 0.8s ease-out; /* Transição suave para visibilidade */
-        }
-
-        /* Animação para quando a seção é visível (usado com JS ou :target) */
-        section:target, section.visible {
-            opacity: 1;
-            transform: translateY(0);
-        }
-
-        /* Header e Navegação */
+        /* Layout e Estilos do Cabeçalho */
         header {
-            background: var(--bg-dark);
+            background-color: var(--bg-dark);
             color: var(--light-text-color);
-            padding: 1rem 5%;
-            position: sticky; /* Fixa o cabeçalho no topo ao rolar */
+            padding: 2rem 5%;
+            position: sticky;
             top: 0;
-            z-index: 1000; /* Garante que o cabeçalho fique acima de outros elementos */
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
         }
 
         nav {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            max-width: 1200px;
-            margin: 0 auto;
         }
 
         .logo {
             font-size: 1.8rem;
             font-weight: 700;
-            color: var(--light-text-color);
             letter-spacing: 1px;
         }
 
@@ -142,32 +73,14 @@
         }
 
         .nav-links li a {
-            color: var(--light-text-color);
             font-size: 1.1rem;
-            font-weight: 400;
-            position: relative;
-            padding: 5px 0;
+            color: var(--light-text-color);
+            transition: color 0.3s;
         }
 
-        /* Animação de linha inferior nos links da navegação */
-        .nav-links li a::after {
-            content: '';
-            position: absolute;
-            width: 0;
-            height: 2px;
-            background: var(--primary-color);
-            bottom: 0;
-            left: 0;
-            transition: width var(--transition-speed);
-        }
-
-        .nav-links li a:hover::after {
-            width: 100%;
-        }
-
-        /* Menu Hamburguer (para mobile) */
+        /* Menu Hamburguer */
         .burger {
-            display: none; /* Escondido por padrão, visível apenas em telas menores */
+            display: none;
             cursor: pointer;
             flex-direction: column;
             gap: 5px;
@@ -180,10 +93,9 @@
             transition: all 0.3s ease;
         }
 
-        /* Seção Hero (primeira tela) */
+        /* Seção Hero (Primeira Tela) */
         .hero {
-            /* Imagem de fundo com um overlay escuro */
-            background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://source.unsplash.com/random/1600x900/?coding,education,student') no-repeat center center/cover;
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://source.unsplash.com/random/1600x900/?tech,web') no-repeat center center/cover;
             color: var(--light-text-color);
             min-height: 80vh;
             display: flex;
@@ -191,44 +103,68 @@
             align-items: center;
             text-align: center;
             padding: 0 5%;
-            animation: fadeIn 1s ease-out; /* Animação de fade-in na carga da página */
+            animation: fadeIn 1s ease-out;
         }
 
-        .hero-content {
-            max-width: 800px;
-        }
-
-        .hero-content h1 {
+        .hero h1 {
             font-size: 4rem;
             margin-bottom: 1rem;
             font-weight: 700;
-            color: var(--light-text-color);
-            animation: slideInUp 1s ease-out 0.5s forwards; /* Animação de slide e fade-in para o título */
-            opacity: 0; /* Inicia invisível para a animação */
+            animation: slideInUp 1s ease-out 0.5s forwards;
+            opacity: 0;
         }
 
-        .hero-content p {
+        .hero p {
             font-size: 1.5rem;
             margin-bottom: 2rem;
             font-weight: 300;
+            animation: slideInUp 1s ease-out 0.7s forwards;
+            opacity: 0;
+        }
+
+        .hero .btn {
+            font-size: 1.2rem;
+            padding: 1rem 2rem;
+            background-color: var(--primary-color);
             color: var(--light-text-color);
-            animation: slideInUp 1s ease-out 0.7s forwards; /* Animação para o parágrafo */
-            opacity: 0;
+            border-radius: 50px;
+            transition: background 0.3s, transform 0.3s;
         }
 
-        .hero-content .btn {
-            animation: slideInUp 1s ease-out 0.9s forwards; /* Animação para o botão */
-            opacity: 0;
+        .hero .btn:hover {
+            background-color: var(--secondary-color);
+            transform: translateY(-5px);
         }
 
-        /* Seção "Sobre Mim" */
+        /* Seção Sobre */
         .about {
             background-color: var(--card-bg);
+            padding: 4rem 5%;
+            margin-top: 4rem;
             border-radius: var(--border-radius);
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
 
-        .about-content {
+        .about h2 {
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+            position: relative;
+            text-align: center;
+        }
+
+        .about h2::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 60px;
+            height: 4px;
+            background-color: var(--primary-color);
+            border-radius: 2px;
+        }
+
+        .about .content {
             font-size: 1.1rem;
             line-height: 1.8;
             max-width: 800px;
@@ -236,46 +172,37 @@
             text-align: justify;
         }
 
-        /* Seção "Projetos" */
-        .projects {
+        /* Seção de Contato */
+        .contact {
             background-color: var(--bg-light);
+            padding: 4rem 5%;
+            margin-top: 4rem;
+            text-align: center;
         }
 
-        .project-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Layout responsivo de grid */
-            gap: 2rem;
-        }
-
-        .project-card {
-            background-color: var(--card-bg);
-            border-radius: var(--border-radius);
-            padding: 2rem;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            transition: transform var(--transition-speed);
-        }
-
-        .project-card:hover {
-            transform: translateY(-5px);
-        }
-
-        .project-card img {
-            max-width: 100%;
-            border-radius: var(--border-radius);
+        .contact h2 {
+            font-size: 2.5rem;
             margin-bottom: 1rem;
         }
 
-        .project-card h3 {
-            font-size: 1.5rem;
-            margin-bottom: 0.8rem;
+        .contact p {
+            font-size: 1.2rem;
+            margin-bottom: 2rem;
+            color: #555;
         }
 
-        .project-card p {
-            font-size: 1rem;
-            color: #666;
+        /* Rodapé */
+        footer {
+            background-color: var(--bg-dark);
+            color: var(--light-text-color);
+            text-align: center;
+            padding: 2rem;
+            position: relative;
+            bottom: 0;
+            width: 100%;
         }
 
-        /* Media Query para dispositivos móveis */
+        /* Responsividade */
         @media screen and (max-width: 768px) {
             .burger {
                 display: flex;
@@ -297,7 +224,6 @@
 
             .nav-links li a {
                 font-size: 2rem;
-                color: var(--light-text-color);
             }
 
             .nav-links.open {
@@ -324,7 +250,7 @@
 
     <header>
         <nav>
-            <div class="logo">Meu Portfólio</div>
+            <div class="logo">Nicolas</div>
             <div class="burger" id="burger">
                 <div></div>
                 <div></div>
@@ -332,8 +258,7 @@
             </div>
             <ul class="nav-links" id="nav-links">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">Sobre Mim</a></li>
-                <li><a href="#projects">Projetos</a></li>
+                <li><a href="#about">Sobre</a></li>
                 <li><a href="#contact">Contato</a></li>
             </ul>
         </nav>
@@ -341,43 +266,31 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Bem-vindo ao meu portfólio!</h1>
-            <p>Sou [Seu Nome], estudante apaixonado por desenvolvimento web. Explore meus projetos e conheça mais sobre mim.</p>
-            <a href="#projects" class="btn">Veja meus Projetos</a>
+            <h1>Olá, eu sou o Nicolas!</h1>
+            <p>Estudante de Desenvolvimento Web, Análise de Dados e Cibersegurança</p>
+            <a href="#about" class="btn">Saiba mais sobre mim</a>
         </div>
     </section>
 
     <section id="about" class="about">
         <h2>Sobre Mim</h2>
-        <div class="about-content">
-            <p>Olá! Eu sou [Seu Nome], um estudante de desenvolvimento web. Adoro aprender novas tecnologias e aplicar meu conhecimento para criar soluções incríveis.</p>
-        </div>
-    </section>
-
-    <section id="projects" class="projects">
-        <h2>Meus Projetos</h2>
-        <div class="project-grid">
-            <!-- Exemplos de Projetos -->
-            <div class="project-card">
-                <img src="https://via.placeholder.com/300" alt="Projeto 1">
-                <h3>Projeto 1</h3>
-                <p>Descrição breve do projeto, tecnologias usadas, e outros detalhes interessantes.</p>
-            </div>
-            <div class="project-card">
-                <img src="https://via.placeholder.com/300" alt="Projeto 2">
-                <h3>Projeto 2</h3>
-                <p>Descrição breve do projeto, tecnologias usadas, e outros detalhes interessantes.</p>
-            </div>
+        <div class="content">
+            <p>Oi! Sou o Nicolas, tenho 16 anos e estou no segundo ano do ensino médio. Sou apaixonado por tecnologia e estou me especializando em áreas como Desenvolvimento Web, Análise de Dados e Cibersegurança.</p>
+            <p>Embora eu ainda não tenha projetos para mostrar, estou constantemente aprendendo e me aprimorando nessas áreas. Estou muito empolgado para o futuro e ansioso para contribuir com soluções tecnológicas inovadoras!</p>
         </div>
     </section>
 
     <section id="contact" class="contact">
         <h2>Contato</h2>
-        <p>Você pode me encontrar através do meu e-mail ou redes sociais.</p>
+        <p>Você pode entrar em contato comigo através do meu e-mail: <a href="mailto:nicolas@exemplo.com">nicolas@exemplo.com</a></p>
+        <p>Ou me encontrar nas redes sociais.</p>
     </section>
 
+    <footer>
+        <p>&copy; 2025 Nicolas - Todos os direitos reservados.</p>
+    </footer>
+
     <script>
-        // Função para alternar a visibilidade do menu no mobile
         const burger = document.getElementById('burger');
         const navLinks = document.getElementById('nav-links');
 
@@ -386,7 +299,6 @@
             burger.classList.toggle('toggle');
         });
 
-        // Função para adicionar animação nas seções quando estiverem visíveis
         const sections = document.querySelectorAll('section');
 
         const checkVisibility = () => {
