--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
     <section id="contact" class="contact">
         <h2>Contato</h2>
-        <p>Você pode entrar em contato comigo através do meu e-mail: <a href="mailto:nicolas@exemplo.com">nicolas@exemplo.com</a></p>
+        <p>Você pode entrar em contato comigo através do meu e-mail: <a href="mailto:santos.nicolas29@escola.pr.gov.br">santos.nicolas29@escola.pr.gov.br</a></p>
         <p>Ou me encontrar nas redes sociais.</p>
     </section>
 
